@@ -106,7 +106,8 @@ cgrates (0.11.0~dev) UNRELEASED; urgency=medium
   * [EEs] Add support for *elastic exporter
   * [AttributeS] Add support for adding fields from other places that event (e.g. Resource.TotalUsage, Stat.MetricName, Account.Balance)
   * [EEs] Empty fields in exporter config will export the full event for the exporters that use json format
-
+  * [DynamicDP] Add support for *libphonenumber prefix
+  
  -- DanB <danb@cgrates.org>  Wed, 19 Feb 2020 13:25:52 +0200
 
 cgrates (0.10.0) UNRELEASED; urgency=medium
